--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.52.88.176:3306/oomall
-    username: ooadUser
-    password: ooad
+    url: jdbc:mysql://123.56.10.101:3306/oomall?serverTimezone=GMT
+    username: root
+    password: 123456
     type: com.alibaba.druid.pool.DruidDataSource
     druid:
       #初始化时建立物理连接的个数
@@ -16,7 +16,7 @@ spring:
       max-wait: 60000
       #配置监控页面访问登录名及密码
       stat-view-servlet:
-        login-username: admin
+        login-username: root
         login-password: 123456
       filter:
         stat:
