--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <!-- 指定该Main Class为全局的唯一入口 -->
-                    <mainClass>xmu.oomall.OoMallApplication</mainClass>
+                    <mainClass>xmu.oomall.OomallApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
