--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,16 @@
 server:
-  port: 8080
+  port: 8073
 
+# 设置服务名称,服务会以这个名字注册到eureka服务器上
 spring:
   application:
-    name: oomall
-  profiles:
-    active: dev
+    name: myclient
+
+# 设置eureka服务器的注册地址
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   endpoint:
