实现售后服务

--- a/AfterSale/src/main/resources/application.yaml
+++ b/AfterSale/src/main/resources/application.yaml
@@ -16,6 +16,11 @@ management:
       exposure:
         include: health, info
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8006/eureka/
+
 mybatis:
   #domain对象的包
   type-aliases-package: xmu.oomall.domain
