--- a/Comment/src/main/resources/application.yaml
+++ b/Comment/src/main/resources/application.yaml
@@ -3,9 +3,14 @@ server:
 
 spring:
   application:
-    name: oomall
+    name: commentService
   profiles:
     active: dev
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8006/eureka/
 
 management:
   endpoint:
