--- a/Comment/src/main/resources/application-dev.yaml
+++ b/Comment/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://123.56.10.101:3306/oomall?serverTimezone=GMT%2B8
-    username: root
-    password: 123456
+    url: jdbc:mysql://47.52.88.176:3306/DB1_2?serverTimezone=GMT%2B8
+    username: user1_2
+    password: ooad2
