--- a/Collecction/src/main/resources/application.yaml
+++ b/Collecction/src/main/resources/application.yaml
@@ -7,6 +7,11 @@ spring:
   profiles:
     active: dev
 eureka:
+  #  instance:
+  #    prefer-ip-address: true
+  #    lease-expiration-duration-in-seconds: 10
+  #    lease-renewal-interval-in-seconds: 20
+  #    ip-address: 服务器ip
   client:
     serviceUrl:
       defaultZone: http://localhost:8006/eureka/
