--- a/EurekaServer/src/main/resources/application.properties
+++ b/EurekaServer/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=springcloud-zuul-eureka
 server.port=8006
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:${server.port}/eureka/
+eureka.client.serviceUrl.defaultZone=h
+ttp://localhost:${server.port}/eureka/
