--- a/Collecction/src/main/resources/application.yaml
+++ b/Collecction/src/main/resources/application.yaml
@@ -3,18 +3,21 @@ server:
 
 spring:
   application:
-    name: 1-2COLLECTION
+    name: 1-2-COLLECTION-SERVICE
   profiles:
     active: dev
 eureka:
-  #  instance:
-  #    prefer-ip-address: true
-  #    lease-expiration-duration-in-seconds: 10
-  #    lease-renewal-interval-in-seconds: 20
-  #    ip-address: 服务器ip
+  instance:
+    prefer-ip-address: true
+    lease-expiration-duration-in-seconds: 10
+    lease-renewal-interval-in-seconds: 20
   client:
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8006/eureka/
+      defaultZone: http://www.clines.club:2222/eureka/
+
+
 
 management:
   endpoint:
