--- a/Share/src/main/resources/application.yaml
+++ b/Share/src/main/resources/application.yaml
@@ -4,7 +4,7 @@ server:
 
 spring:
   application:
-    name: 1-2-COLLECTION-SERVICE
+    name: 1-2-Share-SERVICE
   profiles:
     active: dev
 eureka:
