--- a/Logistics/src/main/resources/application.yaml
+++ b/Logistics/src/main/resources/application.yaml
@@ -3,13 +3,19 @@ server:
 
 spring:
   application:
-    name: 1-2LOGISTICS
+    name: 1-2-LOGSTICS-SERVICE
   profiles:
     active: dev
 eureka:
+  instance:
+    prefer-ip-address: true
+    lease-expiration-duration-in-seconds: 10
+    lease-renewal-interval-in-seconds: 20
   client:
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://www.clines.club:2222/eureka/
 
 
 management:
