--- a/AfterSale/src/main/resources/application.yaml
+++ b/AfterSale/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: 1-2AFTERSALE
+    name: 1-2-AFTERSALES-SERVICE
   profiles:
     active: dev
 
@@ -17,9 +17,15 @@ management:
         include: health, info
 
 eureka:
+  instance:
+    prefer-ip-address: true
+    lease-expiration-duration-in-seconds: 10
+    lease-renewal-interval-in-seconds: 20
   client:
+    register-with-eureka: true
+    fetch-registry: true
     serviceUrl:
-      defaultZone: http://localhost:8006/eureka/
+      defaultZone: http://www.clines.club:2222/eureka/
 
 mybatis:
   #domain对象的包
