--- a/Footprint/src/main/resources/application.yaml
+++ b/Footprint/src/main/resources/application.yaml
@@ -3,9 +3,22 @@ server:
 
 spring:
   application:
-    name: 1-2FOOTPRINT
+    name: 1-2-FOOTPRINT-SERVICE
   profiles:
     active: dev
+
+eureka:
+  instance:
+    prefer-ip-address: true
+    lease-expiration-duration-in-seconds: 10
+    lease-renewal-interval-in-seconds: 20
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    serviceUrl:
+      defaultZone: http://www.clines.club:2222/eureka/
+
+
 
 management:
   endpoint:
@@ -15,11 +28,6 @@ management:
     web:
       exposure:
         include: health, info
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8006/eureka/
 
 mybatis:
   #domain对象的包
