--- a/Footprint/src/main/resources/application-test.yaml
+++ b/Footprint/src/main/resources/application-test.yaml
@@ -4,7 +4,7 @@ spring:
     #JDBC驱动的名称
     driver-class-name: com.mysql.jdbc.Driver
     #数据库的JDBC url
-    url: jdbc:mysql://47.52.88.176:3306/DB2_5?serverTimezone=GMT%2B8
+    url: jdbc:mysql://47.52.88.176:3306/DB2_5?characterEncoding=utf-8
     #数据库用户名
     data-username: user2_5
     #数据库密码
