--- a/AfterSale/src/main/resources/application.yaml
+++ b/AfterSale/src/main/resources/application.yaml
@@ -19,8 +19,9 @@ management:
 eureka:
   instance:
     prefer-ip-address: true
+    ip-address: 123.56.10.101
     lease-expiration-duration-in-seconds: 10
-    lease-renewal-interval-in-seconds: 20
+    lease-renewal-interval-in-seconds: 10
   client:
     register-with-eureka: true
     fetch-registry: true
