--- a/Comment/src/main/resources/application.yaml
+++ b/Comment/src/main/resources/application.yaml
@@ -12,6 +12,7 @@ eureka:
     prefer-ip-address: true
     lease-expiration-duration-in-seconds: 10
     lease-renewal-interval-in-seconds: 20
+    ip-address: 39.99.187.90
   client:
     register-with-eureka: true
     fetch-registry: true
