--- a/Logistics/src/main/resources/application-dev.yaml
+++ b/Logistics/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.52.88.176:3306/DB1_2?serverTimezone=GMT%2B8
-    username: user1_2
-    password: ooad2
+    url: jdbc:mysql://47.52.88.176:3306/DB2_5
+    username: user2_5
+    password: ooad5
