--- a/Address/src/main/resources/application.yaml
+++ b/Address/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: 1-2-ADDRESS-SERVICE
+    name: ADDRESSSERVICE
   profiles:
     active: dev
 
@@ -12,11 +12,12 @@ eureka:
     prefer-ip-address: true
     lease-expiration-duration-in-seconds: 10
     lease-renewal-interval-in-seconds: 20
+    ip-address: 123.56.10.101
   client:
     register-with-eureka: true
     fetch-registry: true
     serviceUrl:
-      defaultZone: http://www.clines.club:2222/eureka/
+      defaultZone: http://172.81.212.62:7001/eureka/
 
 management:
   endpoint:
